# ReadAssetFromJNI

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/nunocky/readassetfromjni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/java/org/nunocky/readassetfromjni/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/org/nunocky/readassetfromjni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
